<resources>
    <string name="app_name">Basic UI</string>
    <string name="submit">Submit</string>
    <string name="simple_login_page">Simple Login Page</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Enter_Username">Enter Username</string>
    <string name="content_description">Login Form</string>
    <string name="helloworld">Hello World</string>
    <string name="status_off">Status: OFF</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="image_button">Image Button</string>
    <string name="normal_button">Normal Button</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="checkbox">CheckBox</string>
    <string name="select_an_option">Select an option:</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="status_not_selected">Status: Not selected</string>
    <string name="radio_button">Radio Button</string>
    <string name="selected_none">Selected: None</string>
    <string name="c">C#</string>
    <string name="python">Python</string>
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>
    <string name="select_your_favorite_programming_language">Select your favorite programming language:</string>
    <string name="determinate_progressbar">Determinate ProgressBar</string>
    <string name="update_determinate_progress">Update Determinate Progress</string>
    <string name="indeterminate_progressbar">Indeterminate ProgressBar</string>
    <string name="toggle_indeterminate_progress">Toggle Indeterminate Progress</string>
    <string name="imageview_example">ImageView Example</string>
    <string name="simple_image_of_android">Simple Image of Android</string>
    <string name="listview_example">ListView Example</string>
    <string name="gridview_example">GridView Example</string>
    <string name="press">Press</string>
    <string name="android_image_icon">Android Image Icon</string>
    <string name="show_custom_toast">Show Custom Toast</string>
    <string name="hello">Hello</string>
    <string name="show_date_picker">Show Date Picker</string>
    <string name="show_time_picker">Show Time Picker</string>
    <string name="selected_date_time_none">Selected Date/Time: None</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="selected_date_none">Selected Date: None</string>
    <string name="selected_time_none">Selected Time: None</string>
    <string name="a">a</string>
    <string name="custom_toast_message">Custom Toast Message</string>
    <string name="notification_toast">Notification Toast</string>
    <string name="click_to_display_text">Click to Display Text</string>
    <string name="second_activity">Second Activity</string>
    <string name="start_second_activity_explicit">Start Second Activity (Explicit)</string>
    <string name="open_webpage_implicit">Open Webpage (Implicit)</string>
    <string name="contacts_will_appear_here">Contacts will appear here</string>
    <string name="start_clock_service">Start Clock Service</string>
    <string name="stop_clock_service">Stop Clock Service</string>
    <string name="airplane_status"/>
    <string name="accelerometer_data">Accelerometer Data</string>
    <string name="rotation_vector">Gyroscope</string>
    <string name="capture">Capture</string>
    <string name="gallery">Gallery</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="rotating_wheel_animation">Rotating wheel animation</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="add_task">Add Task</string>
    <string name="no_tasks_yet">No Tasks Yet</string>
    <string name="my_tasks">My Tasks</string>
    <string name="task_list_description">Task List Description\n</string>
    <string name="login">Login Page 2</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log">login</string>
    <string name="login_success">Login Successful!</string>
    <string name="app_name2">SMS Messenger</string>
    <string name="hint_phone">Enter phone number</string>
    <string name="hint_message">Type your message</string>
    <string name="btn_send">Send</string>
    <string name="received_messages">Received Messages</string>
    <string name="permission_required">SMS Permissions Required</string>
    <string name="permission_required_message">This app needs SMS permissions to function properly.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="sms_sent_success">SMS sent successfully</string>
    <string name="sms_sent_failure">Failed to send SMS</string>
    <string name="error_empty_fields">Phone number and message cannot be empty</string>
    <string name="error_invalid_phone">Please enter a valid phone number</string>
</resources>