<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main8"
    android:orientation="vertical"
    android:layout_marginVertical="30dp"
    tools:context=".Practical9"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_button"
        android:textSize="30sp"
        />
    <Button
        android:id="@+id/normalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/normal_button" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_button"
        android:textSize="30sp"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imagebutton"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/image_button"
        android:src="@drawable/ic_launcher_foreground"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_button"
        android:textSize="30sp"
        />
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:id="@+id/toggleButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        />
    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_off"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>