<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main12"
    android:padding="36dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/determinate_progressbar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />
    <ProgressBar
        android:id="@+id/determinateProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleY="2"
        android:max="100"
        android:progress="0"
        android:layout_marginBottom="16dp" />
    <Button
        android:id="@+id/updateDeterminateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_determinate_progress"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indeterminate_progressbar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />
    <ProgressBar
        android:id="@+id/indeterminateProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginBottom="16dp" />
    <Button
        android:id="@+id/toggleIndeterminateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_indeterminate_progress"
        android:layout_gravity="center_horizontal" />
</LinearLayout>