<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main13"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imageview_example"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="200dp"
            android:background="@drawable/ic_launcher_background"
            android:contentDescription="@string/simple_image_of_android"
            android:layout_height="200dp"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listview_example"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />
        <ListView
            android:id="@+id/myListView"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gridview_example"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />
        <GridView
            android:id="@+id/myGridView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scrollbars="horizontal"
            android:numColumns="3"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</ScrollView>