<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fffff0"
        android:layout_marginTop="2dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/simple_login_page"
        android:textAlignment="center"
        android:textColor="#4308A9"
        android:textSize="40sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="100dp"
        android:autofillHints="name,password"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/login_icon_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40pt"
            android:background="#023A1D"
            android:contentDescription="@string/content_description"
            android:elevation="400dp"
            android:src="@drawable/login_icon"
             />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:id="@+id/username_label"
            android:ellipsize="start"
            android:fontFamily="sans-serif-condensed-medium"
            android:scrollHorizontally="true"
            android:text="@string/Enter_Username"
            android:textAlignment="viewStart"
            android:textColor="#000"
            android:textSize="20sp"
           />
        <EditText
            android:layout_width="150pt"
            android:labelFor="@+id/username_label"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:autofillHints="username"
            android:background="@color/white"
            android:baselineAligned="false"
            android:inputType="text"
            android:id="@+id/username"
            android:maxLength="30"
            android:padding="4dp"
            android:hint="@string/Enter_Username"
            android:scrollHorizontally="true"
            android:textColor="#000"
            android:textSize="20sp"
             />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ellipsize="start"
            android:id="@+id/password_label"
            android:fontFamily="sans-serif-condensed-medium"
            android:scrollHorizontally="true"
            android:text="@string/Enter_Password"
            android:textAlignment="viewStart"
            android:textColor="#000"
            android:textSize="20sp"
            />
        <EditText
            android:layout_width="150pt"
            android:labelFor="@id/password_label"
            android:layout_height="48dp"
            android:id="@+id/password"
            android:layout_gravity="start"
            android:background="@color/white"
            android:baselineAligned="false"
            android:autofillHints="password"
            android:inputType="textVisiblePassword"
            android:maxLength="30"
            android:hint="@string/Enter_Password"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:textColor="#000"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:textSize="15sp"
            android:autofillHints="password"
            android:letterSpacing=".2"
            android:paddingVertical="10dp"
            android:id="@+id/submit_button"
            android:background="@android:drawable/btn_default"
            />
    </LinearLayout>
</RelativeLayout>